--- a/coso.html
+++ b/coso.html
@@ -7,6 +7,7 @@
 <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
    crossorigin=""></script>
+ <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <style>
 #mapid { height: 400px;
 width: 400px;}
@@ -15,15 +16,65 @@ width: 400px;}
 
 </body>
 <script>
-var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoicnJyYWpwdXQiLCJhIjoiY2p6OGVvZGlnMGwyYTNtbnlrNm9iN2ptMCJ9.cFzS8HLWt7sWIF_3sNci4Q', {
-    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    maxZoom: 18,
-    id: 'mapbox.streets',
-    accessToken: 'your.mapbox.access.token'
-}).addTo(mymap);
 
-var marker = L.marker([51.5, -0.09]).addTo(mymap);
-marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
+var map;
+var x=[];
+var y=[];
+var marker = [];
+var i = -1;
+var tot = 6;
+
+function initMap() {
+	if(i==-1){
+        var mymap = L.map('mapid').setView([45.0625, 7.678889], 16);
+		L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoicnJyYWpwdXQiLCJhIjoiY2p6OGVvZGlnMGwyYTNtbnlrNm9iN2ptMCJ9.cFzS8HLWt7sWIF_3sNci4Q', {
+			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+			maxZoom: 18,
+			id: 'mapbox.streets',
+			accessToken: 'your.mapbox.access.token'
+		}).addTo(mymap);
+		}
+	$.ajax({
+        url: "https://api.thingspeak.com/channels/458662/fields/1/last.json?api_key=H162C5Q6K1X4CY57",
+        async: false,
+        dataType: 'json',
+        success: function(data) {
+			i=i+1;
+			x[i%tot] = parseFloat(data.field1);
+        }
+    });
+	$.ajax({
+        url: "https://api.thingspeak.com/channels/458662/fields/2/last.json?api_key=H162C5Q6K1X4CY57",
+        async: false,
+        dataType: 'json',
+        success: function(data) {
+            y[i%tot] = parseFloat(data.field2);
+        }
+    });
+	var today = new Date();
+	var time = today.getDate()+'/'+(today.getMonth()+1)+'/'+today.getFullYear() + "\n" + today.getHours() + ":" + today.getMinutes()
+	console.log(x[i%tot]);
+	console.log(y[i%tot]);
+	console.log(i%tot);
+	console.log(marker.length);
+	console.log(time)
+	if(marker.length == 7){
+		mymap.removeLayer(marker[(i+1)%tot]);
+	}
+	
+	marker[i%tot] = L.marker([x[i%tot], y[i%tot]]).addTo(mymap);
+	marker[i%tot].bindPopup(time);
+	marker[i%tot].on('click', onClick);
+	mymap.setView([x[i%tot], y[i%tot]]);
+	setTimeout(initMap,100);
+}
+function onClick(e) {
+   var popup = e.target.getPopup();
+   var content = popup.getContent();
+
+   console.log(content);
+}
+initMap();
+//marker.bindPopup("<b>Hello world!</b><br>I am a popup.").openPopup();
 </script>
 </html>
